--- a/omnom/package.json
+++ b/omnom/package.json
@@ -16,6 +16,7 @@
     "hbs": "^2.6.0",
     "mongoose": "^3.8.11",
     "morgan": "~1.0.0",
+    "request": "^2.36.0",
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
