--- a/omnom/package.json
+++ b/omnom/package.json
@@ -32,6 +32,7 @@
     "mocha": "^1.19.0",
     "requirejs": "^2.1.11",
     "sinon": "^1.10.0",
-    "superagent": "^0.18.0"
+    "superagent": "^0.18.0",
+    "grunt-contrib-sass": "^0.7.3"
   }
 }
